[package]
name = "mcp-server-linkedin"
version = "0.1.0"
edition = "2024"
description = "MCP server for posting to LinkedIn"

[[bin]]
name = "linkedin"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
anyhow = "1"
toml = "0.8"
base64 = "0.22"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
getrandom = "0.2"

[profile.release]
lto = true
strip = true
